--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,5 @@
 ################################################################################
 
 /.vs
-/webClient/.vs/webClient
-/webClient/.vs
+/webclient/.vs/webclient
+/webclient/.vs
